.kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-app-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-app-backend
  template:
    metadata:
      labels:
        app: patient-app-backend
    spec:
      containers:
        - name: patient-app-backend
          image: jonasblum/patient-app-backend-main
          ports:
            - containerPort: 8080
      nodeName: pc147
